# dbt-language-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dbt_ls/: __init__.py  alias.py  column.py  model.py  pattern.py  profiles.py  server.py  source.py
test/: test_alias.py  test_definition.py  test_model.py  test_pattern.py  test_profile.py
testdata/project/: dev.duckdb
testdata/project/models/example/: schema.yml
