[project]
name = "dbt-ls"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HuhtaLauri", email = "huhta.lauri@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "black>=25.12.0",
    "dbt-core>1.5.1",
    "dbt-duckdb>=1.10.1",
    "hatch>=1.16.5",
    "ibis-framework[duckdb,mssql,mysql,postgres]>=12.0.0",
    "pygls>=2.1.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]

[project.scripts]
dbt-ls = "dbt_ls:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
