[project]
name = "dbt-ls"
version = "0.2.0"
description = "Databse aware DBT Language Server"
readme = "README.md"
authors = [
    { name = "HuhtaLauri", email = "huhta.lauri@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ibis-framework>=12.0.0",
    "jinja2>=3.1.6",
    "pygls>=2.1.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.3",
    "hatch>=1.16.5",
    "twine>=6.2.0",
    "ibis-framework[duckdb,postgres,mysql,mssql]>=12.0.0",
]

[project.optional-dependencies]
duckdb = ["ibis-framework[duckdb]>=12.0.0"]
postgres = ["ibis-framework[postgres]>=12.0.0"]
mysql = ["ibis-framework[mysql]>=12.0.0"]
sqlserver = ["ibis-framework[mssql]>=12.0.0"]
all = ["ibis-framework[duckdb,postgres,mysql,mssql]>=12.0.0"]

[project.scripts]
dbt-ls = "dbt_ls:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
